feat(condo): DOMA-9723 create organization modal

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -452,6 +452,7 @@
   "api.organization.replaceOrganizationEmployeeRole.ORGANIZATION_NOT_FOUND": "Organization not found",
   "api.organization.replaceOrganizationEmployeeRole.ROLES_ARE_BEING_PROCESSED": "These roles are already being processed. Please try again a little later",
   "api.organization.replaceOrganizationEmployeeRole.ROLES_MUST_BE_DIFFERENT": "The new and old roles cannot be the same",
+  "api.organization.sendOrganizationEmployeeRequest.EMPLOYEE_INVITATION_ALREADY_SENT": "You have already been invited to this organization",
   "api.property.exportPropertiesToExcel.NOTHING_TO_EXPORT": "No properties are found to export for current organization",
   "api.property.property.SAME_ADDRESS": "Property with the same address already exists in selected organization",
   "api.propertyScope.exportPropertyScopesToExcel.NOTHING_TO_EXPORT": "No property scopes found for export",
@@ -2816,8 +2817,8 @@
   "pages.ticket.autoAssignment.notifications.delete.message": "Data deleted",
   "pages.ticket.autoAssignment.notifications.error.message": "Failed to load data",
   "pages.ticket.autoAssignment.notifications.save.message": "Data saved",
-  "pages.users.InviteMessageTitle": "You are invited by the organization {name}",
   "pages.users.InviteMessageDescription": "Would you like to accept the invitation?",
+  "pages.users.InviteMessageTitle": "You are invited by the organization {name}",
   "pages.users.InviteNewUserButtonLabel": "Invite new user",
   "pages.users.PageTitle": "Users",
   "pages.users.status.Accepted": "Invite is accepted",
