--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -452,6 +452,7 @@
   "api.organization.replaceOrganizationEmployeeRole.ORGANIZATION_NOT_FOUND": "Organización no encontrada",
   "api.organization.replaceOrganizationEmployeeRole.ROLES_ARE_BEING_PROCESSED": "Estos roles ya se están procesando. Por favor, inténtalo de nuevo un poco más tarde",
   "api.organization.replaceOrganizationEmployeeRole.ROLES_MUST_BE_DIFFERENT": "El rol nuevo y el antiguo no pueden ser iguales",
+  "api.organization.sendOrganizationEmployeeRequest.EMPLOYEE_INVITATION_ALREADY_SENT": "Ya eres miembro de esta organización",
   "api.property.exportPropertiesToExcel.NOTHING_TO_EXPORT": "No hay comunidades para exportación que estén asociadas a esta organización.",
   "api.property.property.SAME_ADDRESS": "Ya existe una propiedad con esta dirección en la organización seleccionada",
   "api.propertyScope.exportPropertyScopesToExcel.NOTHING_TO_EXPORT": "No se han encontrado ámbitos para exportar",
@@ -2816,8 +2817,8 @@
   "pages.ticket.autoAssignment.notifications.delete.message": "Datos borrados",
   "pages.ticket.autoAssignment.notifications.error.message": "Algo ha ido mal",
   "pages.ticket.autoAssignment.notifications.save.message": "Datos guardados",
-  "pages.users.InviteMessageTitle": "La organización {name} te invita",
   "pages.users.InviteMessageDescription": "¿Quieres aceptar la invitación?",
+  "pages.users.InviteMessageTitle": "La organización {name} te invita",
   "pages.users.InviteNewUserButtonLabel": "Invitar a nuevo usuario",
   "pages.users.PageTitle": "Usuarios",
   "pages.users.status.Accepted": "Invitación acepatada",
