--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -452,6 +452,7 @@
   "api.organization.replaceOrganizationEmployeeRole.ORGANIZATION_NOT_FOUND": "Организация не найдена",
   "api.organization.replaceOrganizationEmployeeRole.ROLES_ARE_BEING_PROCESSED": "Эти роли уже обрабатываются. Пожалуйста, повторите попытку чуть позже",
   "api.organization.replaceOrganizationEmployeeRole.ROLES_MUST_BE_DIFFERENT": "Новая и старая роль не могут совпадать",
+  "api.organization.sendOrganizationEmployeeRequest.EMPLOYEE_INVITATION_ALREADY_SENT": "Вы уже состоите в этой организации",
   "api.property.exportPropertiesToExcel.NOTHING_TO_EXPORT": "Нет домов для экспорта, которые связаны с данной организацией",
   "api.property.property.SAME_ADDRESS": "Дом с таким адресом уже создан в выбранной организации",
   "api.propertyScope.exportPropertyScopesToExcel.NOTHING_TO_EXPORT": "Не найдено областей видимости для экспорта",
@@ -2816,8 +2817,8 @@
   "pages.ticket.autoAssignment.notifications.delete.message": "Данные удалены",
   "pages.ticket.autoAssignment.notifications.error.message": "Что-то пошло не так",
   "pages.ticket.autoAssignment.notifications.save.message": "Данные сохранены",
-  "pages.users.InviteMessageTitle": "Вас приглашает организация {name}",
   "pages.users.InviteMessageDescription": "Хотите принять приглашение?",
+  "pages.users.InviteMessageTitle": "Вас приглашает организация {name}",
   "pages.users.InviteNewUserButtonLabel": "Пригласить нового пользователя",
   "pages.users.PageTitle": "Пользователи",
   "pages.users.status.Accepted": "Принял приглашение",
