feat(condo): DOMA-10586 added checkbox selection and multiple download of payments files using zip

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -156,6 +156,7 @@
   "IncludingFee": "including fee",
   "IncludingServiceCharge": "including service charge",
   "Instruction": "Instruction",
+  "ItemsSelectedCount": "Items selected: {count}",
   "Leave": "Leave",
   "LessParameters": "Less parameters",
   "LessThanMinute": "less then a minute",
@@ -301,8 +302,8 @@
   "accrualsAndPayments.payments.type.registry.registryName": "Registry name",
   "accrualsAndPayments.payments.type.registry.amount": "Amount of payments",
   "accrualsAndPayments.payments.type.registry.uploadedRecords": "Number of entries",
-  "accrualsAndPayments.payments.type.registry.status.ACCEPTED": "New",
-  "accrualsAndPayments.payments.type.registry.status.PROCESSED": "Downloaded",
+  "accrualsAndPayments.payments.type.registry.status.NEW": "New",
+  "accrualsAndPayments.payments.type.registry.status.DOWNLOADED": "Downloaded",
   "accrualsAndPayments.setup.chooseBillingStep.title": "Selecting a billing",
   "accrualsAndPayments.setup.noReturn": "At this point it is impossible to go back to this step",
   "accrualsAndPayments.setup.setupAcquiringStep.title": "Acceptance of the offer",
