--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -156,6 +156,7 @@
   "IncludingFee": "comisión incluida",
   "IncludingServiceCharge": "cargo por servicio incluido",
   "Instruction": "Instrucciones",
+  "ItemsSelectedCount": "Elementos seleccionados: {count}",
   "Leave": "Salir",
   "LessParameters": "Menos parámetros",
   "LessThanMinute": "menos de un minuto",
@@ -301,8 +302,8 @@
   "accrualsAndPayments.payments.type.registry.registryName": "Nombre de registro",
   "accrualsAndPayments.payments.type.registry.amount": "Importe de los pagos",
   "accrualsAndPayments.payments.type.registry.uploadedRecords": "Número de entradas",
-  "accrualsAndPayments.payments.type.registry.status.ACCEPTED": "Nuevo",
-  "accrualsAndPayments.payments.type.registry.status.PROCESSED": "Has descargado",
+  "accrualsAndPayments.payments.type.registry.status.NEW": "Nuevo",
+  "accrualsAndPayments.payments.type.registry.status.DOWNLOADED": "Has descargado",
   "accrualsAndPayments.setup.chooseBillingStep.title": "Elegir facturación",
   "accrualsAndPayments.setup.noReturn": "No es posible volver a este paso en este momento",
   "accrualsAndPayments.setup.setupAcquiringStep.title": "Aceptación de oferta",
