--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -156,6 +156,7 @@
   "IncludingFee": "в том числе комиссия",
   "IncludingServiceCharge": "в том числе сервисный сбор",
   "Instruction": "Инструкция",
+  "ItemsSelectedCount": "Выбрано элементов: {count}",
   "Leave": "Покинуть",
   "LessParameters": "Меньше параметров",
   "LessThanMinute": "меньше минуты",
@@ -231,6 +232,7 @@
   "SelectIsRequired": "Необходимо выбрать значение",
   "SelectOrganizationRequired": "Необходимо выбрать организацию",
   "Selected": "Выбрано",
+  "SelectedElements": "Выбрано элементов",
   "SendTicketToEmail": "Отправить заявку на почту",
   "SendVerificationCode": "Отправить код подтверждения",
   "ServerError": "Ошибка сервера",
@@ -300,8 +302,8 @@
   "accrualsAndPayments.payments.type.registry.registryName": "Имя файла",
   "accrualsAndPayments.payments.type.registry.amount": "Сумма платежей",
   "accrualsAndPayments.payments.type.registry.uploadedRecords": "Кол-во записей",
-  "accrualsAndPayments.payments.type.registry.status.ACCEPTED": "Новый",
-  "accrualsAndPayments.payments.type.registry.status.PROCESSED": "Вы скачали",
+  "accrualsAndPayments.payments.type.registry.status.NEW": "Новый",
+  "accrualsAndPayments.payments.type.registry.status.DOWNLOADED": "Вы скачали",
   "accrualsAndPayments.payments.noPaymentsYet.title": "Оплат пока нет",
   "accrualsAndPayments.setup.chooseBillingStep.title": "Выбор биллинга",
   "accrualsAndPayments.setup.noReturn": "На данном этапе вернуться к этому шагу невозможно",
