refactor(condo): DOMA-10586 minor design fixes and PR comment fixes

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -170,7 +170,7 @@
   "MoreParameters": "More parameters",
   "MoreReceiptsWithZeroCharge": "{count, plural, one {# service} other {# services}} with zero charges",
   "MoreTicketsLeft": "And {ticketsLeft, plural, one {# more ticket} other {# more tickets}}",
-  "MultiPayment.status.DONE": "Done",
+  "MultiPayment.status.DONE": "Done (already on your bank account)",
   "MultiPayment.status.ERROR": "Error",
   "MultiPayment.status.PROCESSING": "Processing",
   "Name": "Name",
@@ -294,7 +294,9 @@
   "accrualsAndPayments.onBoardingModal.text": "For residents to pay their receipts via the Doma mobile app, select the download method and sign the offer. From then on, all payments will be displayed in this section.",
   "accrualsAndPayments.onBoardingModal.title": "About the section",
   "accrualsAndPayments.payments.noPaymentsYet.message": "Residents have not yet paid any receipts. As soon as this happens, the transaction information will appear here.",
+  "accrualsAndPayments.paymentsFiles.noPaymentsFilesYet.message": "We will display them here as soon as they are generated.",
   "accrualsAndPayments.payments.noPaymentsYet.title": "No payments yet",
+  "accrualsAndPayments.paymentsFiles.noPaymentsFilesYet.title": "There are no payment registries yet",
   "accrualsAndPayments.payments.type.list": "List",
   "accrualsAndPayments.payments.type.registry": "Registries",
   "accrualsAndPayments.payments.type.registry.registryNumber": "№ of registry",
