--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -170,7 +170,7 @@
   "MoreParameters": "Más parámetros",
   "MoreReceiptsWithZeroCharge": "{count, plural, one {# servicio} few {# servicio} many {# servicios} other {# servicios}} con cargo cero",
   "MoreTicketsLeft": "Más {ticketsLeft, plural, one {# incidencia} few {# incidencia} many {# incidencias} other {# incidencias}}",
-  "MultiPayment.status.DONE": "Completado",
+  "MultiPayment.status.DONE": "Completado (ya en su cuenta corriente)",
   "MultiPayment.status.ERROR": "Error",
   "MultiPayment.status.PROCESSING": "Procesando",
   "Name": "Nombre",
@@ -294,7 +294,9 @@
   "accrualsAndPayments.onBoardingModal.text": "Para que los vecinos puedan pagar los recibos a través de la app móvil Doma, seleccione el método de descarga y firme la oferta. A partir de ahora, todos los pagos se mostrarán en esta sección.",
   "accrualsAndPayments.onBoardingModal.title": "Sobre la sección",
   "accrualsAndPayments.payments.noPaymentsYet.message": "Los vecinos no han pagado ningún recibo. Una vez que eso pase aquí aparecerá la información sobre la transacción.",
+  "accrualsAndPayments.paymentsFiles.noPaymentsFilesYet.message": "Los mostraremos aquí tan pronto como se formen.",
   "accrualsAndPayments.payments.noPaymentsYet.title": "Todavía no hay pagos",
+  "accrualsAndPayments.paymentsFiles.noPaymentsFilesYet.title": "Hasta el momento no hay registros de pago",
   "accrualsAndPayments.payments.type.list": "Lista",
   "accrualsAndPayments.payments.type.registry": "Registros",
   "accrualsAndPayments.payments.type.registry.registryNumber": "№ de registro",
