--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -170,7 +170,7 @@
   "MoreParameters": "Больше параметров",
   "MoreReceiptsWithZeroCharge": "{count, plural, one {# услуга} few {# услуги} many {# услуг} other {# услуг}} с нулевыми начислениями",
   "MoreTicketsLeft": "Ещё {ticketsLeft, plural, one {# заявка} few {# заявки} many {# заявок} other {# заявок}}",
-  "MultiPayment.status.DONE": "Завершено",
+  "MultiPayment.status.DONE": "Завершено (уже на вашем р/с)",
   "MultiPayment.status.ERROR": "Ошибка",
   "MultiPayment.status.PROCESSING": "В обработке",
   "Name": "Имя",
@@ -295,6 +295,7 @@
   "accrualsAndPayments.onBoardingModal.text": "Чтобы жители оплачивали квитанции через мобильное приложение Doma, выберите способ загрузки и подпишите оферту. С этого момента все оплаты будут отображаться в этом разделе.",
   "accrualsAndPayments.onBoardingModal.title": "О разделе",
   "accrualsAndPayments.payments.noPaymentsYet.message": "Жители не оплатили ни одной квитанции. Как только это случится, информация о транзакциях появится здесь.",
+  "accrualsAndPayments.paymentsFiles.noPaymentsFilesYet.message": "Отобразим их здесь, как только они будут сформированы.",
   "accrualsAndPayments.payments.type.list": "Список",
   "accrualsAndPayments.payments.type.registry": "Реестры",
   "accrualsAndPayments.payments.type.registry.registryNumber": "№ реестра",
@@ -305,6 +306,7 @@
   "accrualsAndPayments.payments.type.registry.status.NEW": "Новый",
   "accrualsAndPayments.payments.type.registry.status.DOWNLOADED": "Вы скачали",
   "accrualsAndPayments.payments.noPaymentsYet.title": "Оплат пока нет",
+  "accrualsAndPayments.paymentsFiles.noPaymentsFilesYet.title": "Пока реестров оплат нет",
   "accrualsAndPayments.setup.chooseBillingStep.title": "Выбор биллинга",
   "accrualsAndPayments.setup.noReturn": "На данном этапе вернуться к этому шагу невозможно",
   "accrualsAndPayments.setup.setupAcquiringStep.title": "Акцепт оферты",
