--- a/apps/dev-portal-web/docs/api/examples/auth.ru.mdx
+++ b/apps/dev-portal-web/docs/api/examples/auth.ru.mdx
@@ -2,15 +2,17 @@
 На текущий момент, мы используем два механизма авторизацию: **cookie based** authentication
 и **bearer token** based authentication.
 
-## authenticateUserWithPhoneAndPassword
-
-Используйте мутацию `authenticateUserWithPhoneAndPassword` для аутентификации пользователя.
+Есть несколько способов аутентификации. Для каждого из них есть свой мутация.
 После успешного выполнения мутации, мы установим вам `cookie` сессию.
 Из этой же мутации вы сможете получить авторизационный токен и использовать его в последующих запросах,
 выставляя в заголовке `Authorization` значение `Bearer <token>`.
 
+## authenticateUserWithPhoneAndPassword
+
+Используйте мутацию `authenticateUserWithPhoneAndPassword` для аутентификации пользователя с использованием номера телефона и пароля.
+
 <Tabs labels={['Пример GQL-запроса', 'Пример CURL-запроса', 'Пример ответа']}>
-```
+```graphql
 mutation {
   authenticateUserWithPhoneAndPassword(data: {
     phone: "+79990000000"
@@ -25,7 +27,7 @@ mutation {
 }
 ```
 ```bash
-curl 'https://condo.d.doma.ai/admin/api' -H 'Content-Type: application/json' --data-raw $'{"operationName":"authenticateUserWithPhoneAndPassword","variables":{"phone":"+79990000000","password":"12345678"},"query":"mutation authenticateUserWithPhoneAndPassword($phone: String!, $password: String!) {  obj: authenticateUserWithPhoneAndPassword(data: {phone: $phone, password: $password}) { token item { id name } } }"}'
+curl 'https://condo.d.doma.ai/admin/api' -H 'Content-Type: application/json' --data-raw $'{"operationName":"authenticateUserWithPhoneAndPassword","variables":{"phone":"+79990000000","password":"12345678"},"query":"mutation authenticateUserWithPhoneAndPassword($phone: String!, $password: String!) { obj: authenticateUserWithPhoneAndPassword(data: {phone: $phone, password: $password}) { token item { id name } } }"}'
 ```
 
 ```JSON
@@ -41,6 +43,37 @@ curl 'https://condo.d.doma.ai/admin/api' -H 'Content-Type: application/json' --d
   }
 }
 ```
+</Tabs>
+
+## authenticateUserWithPassword
+
+Аутентификация с использованием почты и пароля подходит для сервисных пользователей. Работает аналогично мутации `authenticateUserWithPhoneAndPassword`.
+
+<Tabs labels={['Пример GQL-запроса', 'Пример CURL-запроса', 'Пример ответа']}>
+    ```graphql
+    mutation {
+      authenticateUserWithPassword(email: "e@ma.il" password: "***") {
+        token item { id name }
+      }
+    }
+    ```
+    ```bash
+    curl 'https://condo.d.doma.ai/admin/api' -H 'Content-Type: application/json' --data-raw $'{"operationName":"authenticateUserWithPassword","variables":{"identity":"e@ma.il","password":"12345678"},"query":"mutation authenticateUserWithPassword($identity: String!, $password: String!) { obj: authenticateUserWithPassword(email: $identity, password: $password) { token item { id name } } }"}'
+    ```
+
+    ```json
+    {
+      "data": {
+        "authenticateUserWithPassword": {
+          "token": "lSULdzVaPWBK8CTH-7A5JpL8YFRk3YNg0.8R+N+OrJXoAA7fNe60EBR+ckkQ73SSZqa/7WXTTG6ZMMQ",
+          "item": {
+            "id": "d586e452-d60f-44fa-9330-b7318a3a4c57",
+            "name": "Ivan Ivanov"
+          }
+        }
+      }
+    }
+    ```
 </Tabs>
 
 ## authenticatedUser
