feat(dev-portal-web): DOMA-11304 code review 1

--- a/apps/dev-portal-web/docs/api/cases/invoices/prepare.ru.mdx
+++ b/apps/dev-portal-web/docs/api/cases/invoices/prepare.ru.mdx
@@ -1,7 +1,7 @@
 ## Общая информация
 У управляющих компаний есть потребность продавать своим жителям услуги и товары.
 Например, сотрудники УК могут оказывать услуги по ремонту коммуникаций и сетей, замене и подключению оборудования.
-Чтобы жители могли видеть список услуг, у нас есть раздел Маркетплейс (https://condo.d.doma.ai/marketplace).
+Чтобы жители могли видеть список услуг, в Condo есть раздел Маркетплейс (https://condo.d.doma.ai/marketplace).
 Тут сгруппирован функционал управления витриной и счетами.
 
 ## Настройка Маркетплейса
