--- a/apps/dev-portal-web/docs/api/cases/invoices/work-with-invoices.ru.mdx
+++ b/apps/dev-portal-web/docs/api/cases/invoices/work-with-invoices.ru.mdx
@@ -1,7 +1,7 @@
 Счет можно создать с указанием данных о плательщике (адрес, телефон, имя) или без.
 В первом случае житель увидит счет в мобильном приложении и оттуда же сможет оплатить.
 Во втором - счет можно будет оплатить только по ссылке.
-Также счет можно напрямую привязать к пользователю. Это удобно делать, например, из мини приложения.
+Также счет можно напрямую привязать к пользователю. Это удобно делать, например, из мини-приложения.
 В этом случае житель так же увидит счет в мобильном приложении.
 
 ## Анонимный счет
@@ -32,7 +32,7 @@
 
 **paymentType**
 
-Тип оплаты. Возможные варианты: **online** и **cash**. Это поле носит скорее информационный характер.
+Тип оплаты. Возможные варианты: `online` и `cash`. Это поле носит скорее информационный характер.
 Всегда можно сформировать ссылку на оплату и при этом оплатить наличными.
 <Alert type="warning">
     Автоматическая смена статусов будет работать только для онлайн оплаты. При наличной оплате статусы переключаются
@@ -41,7 +41,7 @@
 
 **status**
 
-Это статус счета. Возможные значения: **draft**, **published**, **paid**, **canceled**.
+Это статус счета. Возможные значения: `draft`, `published`, `paid`, `canceled`.
 Черновик невозможно оплатить и нельзя увидеть в мобильном приложении.
 Опубликованный счет нельзя редактировать, как и уже оплаченный.
 
@@ -135,10 +135,11 @@
     }
     ```
 </Tabs>
+
 ## Счет для жителя
 Чтобы счет был виден в мобильном приложении, нужно указать адрес плательщика.
-Это поля **property**, **unitType** и **unitName**. При наличии, можно указать имя и телефон жителя в полях **clientName** и **clientPhone**.
-Тогда к счету будет привязан контакт жителя (поле **contact** в ответе сервера).
+Это поля `property`, `unitType` и `unitName`. При наличии, можно указать имя и телефон жителя в полях `clientName` и `clientPhone`.
+Тогда к счету будет привязан контакт жителя (поле `contact` в ответе сервера).
 Если такой контакт уже добавлен, то привяжется он. Если такого контакта еще нет, то он будет создан и привязан к счету.
 <Tabs labels={['Пример GQL-запроса', 'Пример ответа']}>
     ```graphql
@@ -257,31 +258,20 @@
     ```
 </Tabs>
 
-## Счет от b2c мини приложения
-Счет может быть выставлен жителю с помощью мини приложения. Запрос на создание счета отправляется от бэкенда мини приложения.
-Для этого мини приложение должно быть авторизовано под сервисным пользователем (см. раздел [аутентификация](/docs/api/examples/auth#authenticateuserwithpassword)).
+## Счет от b2c мини-приложения
+Счет может быть выставлен жителю с помощью мини-приложения. Запрос на создание счета отправляется от бэкенда мини приложения.
+Для этого мини-приложение должно быть авторизовано под сервисным пользователем (см. раздел [аутентификация](/docs/api/examples/auth#authenticateuserwithpassword)).
 
-Сервисный пользователь мини приложения будет иметь доступ к выставлению, редактированию и чтению счетов от имени
-организации (поле **organization**) после того как организация подключит мини приложение (b2b часть).
+Сервисный пользователь мини-приложения будет иметь доступ к выставлению, редактированию и чтению счетов от имени
+организации (поле `organization`) после того как организация подключит мини-приложение (b2b часть).
 
-Организация, указанная при создании счета в поле **organization**, будет видеть счет в разделе "Маркетплейс".
+Организация, указанная при создании счета в поле `organization`, будет видеть счет в разделе "Маркетплейс".
 Чтобы житель получил пуш-уведомление и увидел новый счет у себя в мобильном приложении, необходимо указать следующие поля:
 
-**client**
-
-Это идентификатор пользователя
-
-**property**
-
-Дом, в котором зарегистрировался житель
-
-**unitType**
-
-Тип помещение жителя
-
-**unitName**
-
-Наименование помещения (номер квартиры)
+- `client` Идентификатор пользователя
+- `property` Дом, в котором зарегистрировался житель
+- `unitType` Тип помещение жителя
+- `unitName` Наименование помещения (номер квартиры)
 
 <Tabs labels={['Пример GQL-запроса', 'Пример ответа']}>
     ```graphql
@@ -474,8 +464,8 @@ https://condo.d.doma.ai/payment-link?su={successUrl}&fu={failureUrl}&i={invoiceI
 
 | Поле       | Описание                                                                   | Тип/формат          | Пример                                                                    |
 |------------|----------------------------------------------------------------------------|---------------------|---------------------------------------------------------------------------|
-| successUrl | Адрес, на который будет перенаправлен пользователь при успешной оплате     | Строка, url encoded | https%3A%2F%2Fcondo.d.doma.ai%2Fmarketplace%2Finvoice%2Fpayment%2Fsuccess |
-| failureUrl | Адрес, на который будет перенаправлен пользователь, если оплата не удалась | Строка, url encoded | https%3A%2F%2Fcondo.d.doma.ai%2Fmarketplace%2Finvoice%2Fpayment%2Ffailure |
-| invoiceId  | Идентификатор счета                                                        | Строка, UUID        | 14d5f5c9-de39-4d02-9116-6a2e501e54e1                                      |
+| successUrl | Адрес, на который будет перенаправлен пользователь при успешной оплате     | string, url encoded | https%3A%2F%2Fcondo.d.doma.ai%2Fmarketplace%2Finvoice%2Fpayment%2Fsuccess |
+| failureUrl | Адрес, на который будет перенаправлен пользователь, если оплата не удалась | string, url encoded | https%3A%2F%2Fcondo.d.doma.ai%2Fmarketplace%2Finvoice%2Fpayment%2Ffailure |
+| invoiceId  | Идентификатор счета                                                        | string, UUID        | 14d5f5c9-de39-4d02-9116-6a2e501e54e1                                      |
 
 При переходе по ссылке будут созданы сущности эквайринга и пользователь будет перенаправлен на страницу ввода банковской карты. После оплаты пользователь будет перенаправлен на страницу результата (успех/ошибка)
