feat(dev-portal-web): DOMA-11304 code review 1

--- a/apps/dev-portal-web/docs/api/cases/invoices/amount-distribution.ru.mdx
+++ b/apps/dev-portal-web/docs/api/cases/invoices/amount-distribution.ru.mdx
@@ -18,14 +18,14 @@
   "overpaymentPart": number,
 }
 ```
-| поле            | тип     | описание                                                                                                                                                                                                                                                                                                                                                                                          |
-|-----------------|---------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| recipient       | object  | Это реквизиты получателя средств. Соответствует типу `RecipientField`. Описание можно увидеть в [Playground API DOCS](/docs/api/playground#просмотр-доступных-полей-с-помощью-playground-api-docs).                                                                                                                                                                                               |
-| amount          | string  | Сумма, которая будет перечислена.                                                                                                                                                                                                                                                                                                                                                                 |
-| order           | number  | Очередность распределения средств. По умолчанию равно нулю (0). Используется для тонкой настройки в случае частичной оплаты.                                                                                                                                                                                                                                                                      |
-| vor             | boolean | Аббревиатура от **V**ictim **o**f **R**ounding. Указывает кто будет брать на себя результат округления. Например, если делить 100 на 3, то два получателя получат по 33.33, а тот, у кого указано `vor: true`, получит 33,34.                                                                                                                                                                     |
-| isFeePayer      | boolean | Показывает кто из получателей средств будет платить комиссию домов.                                                                                                                                                                                                                                                                                                                               |
-| overpaymentPart | number  | Задает долю от переплаты, которая отправится к получателю. Например, если только у одного получателя будет указано overpaymentPart: 1, то ему отправится вся переплата. Если у двоих получателей будет указано overpaymentPart: 1, то каждый из них получит по половине переплаты. Все поля и их типы указаны в схеме данных, которые можно найти в песочнице: https://condo.d.doma.ai/admin/api. |
+| поле            | тип     | Обязательно | описание                                                                                                                                                                                                                                                                                                                                                                                          |
+|-----------------|---------|:-----------:|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| recipient       | object  |     да      | Это реквизиты получателя средств. Соответствует типу `RecipientField`. Описание можно увидеть в [Playground API DOCS](/docs/api/playground#просмотр-доступных-полей-с-помощью-playground-api-docs).                                                                                                                                                                                               |
+| amount          | string  |     да      | Сумма, которая будет перечислена.                                                                                                                                                                                                                                                                                                                                                                 |
+| order           | number  |     нет     | Очередность распределения средств. По умолчанию равно нулю (0). Используется для тонкой настройки в случае частичной оплаты.                                                                                                                                                                                                                                                                      |
+| vor             | boolean |     нет     | Аббревиатура от **V**ictim **o**f **R**ounding. Указывает кто будет брать на себя результат округления. Например, если делить 100 на 3, то два получателя получат по 33.33, а тот, у кого указано `vor: true`, получит 33,34.                                                                                                                                                                     |
+| isFeePayer      | boolean |     нет     | Показывает кто из получателей средств будет платить комиссию домов.                                                                                                                                                                                                                                                                                                                               |
+| overpaymentPart | number  |     нет     | Задает долю от переплаты, которая отправится к получателю. Например, если только у одного получателя будет указано overpaymentPart: 1, то ему отправится вся переплата. Если у двоих получателей будет указано overpaymentPart: 1, то каждый из них получит по половине переплаты. Все поля и их типы указаны в схеме данных, которые можно найти в песочнице: https://condo.d.doma.ai/admin/api. |
 
 <Alert type='warning'>
     Реквизиты получателя должны быть предварительно провалидированы через техподдержку.
