fix(condo): DOMA-10586 added missing translations

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -232,6 +232,7 @@
   "SelectIsRequired": "Required to select value",
   "SelectOrganizationRequired": "Please select any organization",
   "Selected": "Selected",
+  "SelectedElements": "Selected elements",
   "SendTicketToEmail": "Send ticket to email",
   "SendVerificationCode": "Send verification code",
   "ServerError": "Server error",
