--- a/apps/dev-portal-web/docs/api/cases/invoices/work-with-invoices.ru.mdx
+++ b/apps/dev-portal-web/docs/api/cases/invoices/work-with-invoices.ru.mdx
@@ -7,39 +7,28 @@
 ## Анонимный счет
 Минимальный набор полей, который в принципе необходим для создания счета, создает анонимный счет.
 Такой счет не виден в мобильном приложении и может быть оплачен только по ссылке.
-**dv** и **sender**
 
-**organization**
-
-`{ id: UUID }` организация, которая создает счет
-
-**toPay**
-
-Общая сумма счета
-
-**rows**
-
-Позиции, включенные в счет (услуги/товары). Это массив объектов вида:
-
+- `dv`
+- `sender`
+- `organization` организация, которая создает счет
+- `toPay` Общая сумма счета
+- `rows` Позиции, включенные в счет (услуги/товары). Это массив объектов вида:
 ```json
 { "name": "Услуга 1", "count": 1, "toPay": "100", "isMin": false }
 ```
-
 Поле isMin означает, что toPay - это минимальная цена (цена от). Ставится в false после окончательного согласования цены.
 <Alert type="warning">
     Счет, в котором есть не окончательные цены, невозможно опубликовать.
 </Alert>
 
-**paymentType**
-
-Тип оплаты. Возможные варианты: `online` и `cash`. Это поле носит скорее информационный характер.
+- `paymentType` Тип оплаты. Возможные варианты: `online` и `cash`. Это поле носит скорее информационный характер.
 Всегда можно сформировать ссылку на оплату и при этом оплатить наличными.
 <Alert type="warning">
     Автоматическая смена статусов будет работать только для онлайн оплаты. При наличной оплате статусы переключаются
     вручную или через АПИ.
 </Alert>
 
-**status**
+- `status`
 
 Это статус счета. Возможные значения: `draft`, `published`, `paid`, `canceled`.
 Черновик невозможно оплатить и нельзя увидеть в мобильном приложении.
@@ -462,10 +451,10 @@
 https://condo.d.doma.ai/payment-link?su={successUrl}&fu={failureUrl}&i={invoiceId}
 ```
 
-| Поле       | Описание                                                                   | Тип/формат          | Пример                                                                    |
-|------------|----------------------------------------------------------------------------|---------------------|---------------------------------------------------------------------------|
-| successUrl | Адрес, на который будет перенаправлен пользователь при успешной оплате     | string, url encoded | https%3A%2F%2Fcondo.d.doma.ai%2Fmarketplace%2Finvoice%2Fpayment%2Fsuccess |
-| failureUrl | Адрес, на который будет перенаправлен пользователь, если оплата не удалась | string, url encoded | https%3A%2F%2Fcondo.d.doma.ai%2Fmarketplace%2Finvoice%2Fpayment%2Ffailure |
-| invoiceId  | Идентификатор счета                                                        | string, UUID        | 14d5f5c9-de39-4d02-9116-6a2e501e54e1                                      |
+| Поле       | Описание                                                                   | Тип/формат          | Пример                                  |
+|------------|----------------------------------------------------------------------------|---------------------|-----------------------------------------|
+| successUrl | Адрес, на который будет перенаправлен пользователь при успешной оплате     | string, url encoded | https%3A%2F%2Fcondo.d.doma.ai%2Fsuccess |
+| failureUrl | Адрес, на который будет перенаправлен пользователь, если оплата не удалась | string, url encoded | https%3A%2F%2Fcondo.d.doma.ai%2Ffailure |
+| invoiceId  | Идентификатор счета                                                        | string, UUID        | 14d5f5c9-de39-4d02-9116-6a2e501e54e1    |
 
 При переходе по ссылке будут созданы сущности эквайринга и пользователь будет перенаправлен на страницу ввода банковской карты. После оплаты пользователь будет перенаправлен на страницу результата (успех/ошибка)
