--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -321,6 +321,7 @@
   "acquiringReceipt.total": "Total",
   "api.acquiring.exportPaymentsToExcel.NOTHING_TO_EXPORT": "No payments to export",
   "api.acquiring.multiPayment.RECEIPTS_WITH_INVOICES_FORBIDDEN": "Receipts and invoices are forbidden to be together",
+  "api.acquiring.multiPayment.FULL_PAYMENT_AMOUNT_MISMATCH": "Cannot pay amount that is different from receipt's to pay amount when paying for receipt with given category",
   "api.acquiring.payment.PAYMENT_AMOUNT_GREATER_THAN_MAXIMUM": "Payment amount must not exceed {maximumPaymentAmount}",
   "api.acquiring.payment.PAYMENT_AMOUNT_LESS_THAN_MINIMUM": "Payment amount must be at least {minimumPaymentAmount}",
   "api.analytics.getOverviewDashboard.FEATURE_IS_DISABLED": "This feature is unavailable for your organization",
